feat: swaggerdefinitions are now fetched directly by the controller instead by the swagger ui (#496)
